--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <main class="content">
-      <h2 class="content__title">журнал дошкольного отделения мбоу виндовской сош № 7</h2>
+      <h2 class="content__title">журнал дошкольного отделения мбоу видновской сош № 7</h2>
 
       <section class="cards-list">
         <div class="card-item" >
