--- a/index.html
+++ b/index.html
@@ -26,27 +26,41 @@
       <h2 class="content__title">журнал дошкольного отделения мбоу видновской сош № 7</h2>
 
       <section class="cards-list">
-        <div class="card-item" >
-          <img class="card-item__image" id="10" src="./images/magazine/10/1.jpg" alt="">
+        <div>
+          <div class="card-item" >
+            <img class="card-item__image" id="10" src="./images/magazine/10/1.jpg" alt="">
+          </div>
+          <p class="card-item__info">Октябрь 2022</p>
         </div>
 
-        <div class="card-item">
+        <div>
+          <div class="card-item">
             <img class="card-item__image" id="11" src="./images/magazine/11/1.jpg" alt="">
+          </div>
+          <p class="card-item__info">Ноябрь 2022</p>
         </div>
 
-        <div class="card-item">
-          <div class="card-item__title">
-            <p class="card-item__text">выпуск</p>
-            <p class="card-item__text">декабрь 2022</p>
+
+        <div>
+          <div class="card-item">
+            <div class="card-item__title">
+              <p class="card-item__text">выпуск</p>
+              <p class="card-item__text">декабрь 2022</p>
+            </div>
           </div>
+          <p class="card-item__info"></p>
         </div>
 
-        <div class="card-item">
-          <div class="card-item__title">
-            <p class="card-item__text">выпуск</p>
-            <p class="card-item__text">январь 2023</p>
+        <div>
+          <div class="card-item">
+            <div class="card-item__title">
+              <p class="card-item__text">выпуск</p>
+              <p class="card-item__text">январь 2023</p>
+            </div>
           </div>
+          <p class="card-item__info"></p>
         </div>
+
 
         <div class="card-item">
           <div class="card-item__title">
@@ -107,8 +121,8 @@
 
     </main>
 
-    <footer class="footer">
-    </footer>
+    <!-- <footer class="footer">
+    </footer> -->
 
     <div class="popup-view popup-view_hidden">
       <a class="popup-view__leaf  popup-view__previous" >&#10094;</a>
