--- a/index.html
+++ b/index.html
@@ -30,14 +30,17 @@
           <div class="card-item" >
             <img class="card-item__image" id="10" src="./images/magazine/10/1.jpg" alt="">
           </div>
-          <p class="card-item__info">Октябрь 2022</p>
+          <p class="card-item__info">Сентябрь 2022</p>
         </div>
 
         <div>
           <div class="card-item">
-            <img class="card-item__image" id="11" src="./images/magazine/11/1.jpg" alt="">
+            <div class="card-item__title">
+              <p class="card-item__text">выпуск</p>
+              <p class="card-item__text">октябрь 2022</p>
+            </div>
           </div>
-          <p class="card-item__info">Ноябрь 2022</p>
+          <p class="card-item__info"></p>
         </div>
 
 
@@ -45,7 +48,7 @@
           <div class="card-item">
             <div class="card-item__title">
               <p class="card-item__text">выпуск</p>
-              <p class="card-item__text">декабрь 2022</p>
+              <p class="card-item__text">ноябрь 2022</p>
             </div>
           </div>
           <p class="card-item__info"></p>
@@ -55,7 +58,7 @@
           <div class="card-item">
             <div class="card-item__title">
               <p class="card-item__text">выпуск</p>
-              <p class="card-item__text">январь 2023</p>
+              <p class="card-item__text">декабрь 2023</p>
             </div>
           </div>
           <p class="card-item__info"></p>
@@ -65,7 +68,14 @@
         <div class="card-item">
           <div class="card-item__title">
             <p class="card-item__text">выпуск</p>
-            <p class="card-item__text">феврал 2023</p>
+            <p class="card-item__text">январь 2023</p>
+          </div>
+        </div>
+
+        <div class="card-item">
+          <div class="card-item__title">
+            <p class="card-item__text">выпуск</p>
+            <p class="card-item__text">февраль 2023</p>
           </div>
         </div>
 
@@ -107,14 +117,7 @@
         <div class="card-item">
           <div class="card-item__title">
             <p class="card-item__text">выпуск</p>
-            <p class="card-item__text">август 2023</p>
-          </div>
-        </div>
-
-        <div class="card-item">
-          <div class="card-item__title">
-            <p class="card-item__text">выпуск</p>
-            <p class="card-item__text">сентябрь 2022</p>
+            <p class="card-item__text">август 2022</p>
           </div>
         </div>
       </section>
