разместил второй журнал

--- a/index.html
+++ b/index.html
@@ -34,13 +34,10 @@
         </div>
 
         <div>
-          <div class="card-item">
-            <div class="card-item__title">
-              <p class="card-item__text">выпуск</p>
-              <p class="card-item__text">октябрь 2022</p>
-            </div>
+          <div class="card-item" >
+            <img class="card-item__image" id="10" src="./images/magazine/10/1.jpg" alt="">
           </div>
-          <p class="card-item__info"></p>
+          <p class="card-item__info">Октябрь 2022</p>
         </div>
 
 
