разместил третий журнал

--- a/index.html
+++ b/index.html
@@ -42,13 +42,10 @@
 
 
         <div>
-          <div class="card-item">
-            <div class="card-item__title">
-              <p class="card-item__text">выпуск</p>
-              <p class="card-item__text">ноябрь 2022</p>
-            </div>
+          <div class="card-item" >
+            <img class="card-item__image" id="11" src="./images/magazine/11/1.jpg" alt="">
           </div>
-          <p class="card-item__info"></p>
+          <p class="card-item__info">Ноябрь 2022</p>
         </div>
 
         <div>
