--- a/index.html
+++ b/index.html
@@ -49,14 +49,12 @@
         </div>
 
         <div>
-          <div class="card-item">
-            <div class="card-item__title">
-              <p class="card-item__text">выпуск</p>
-              <p class="card-item__text">декабрь 2022</p>
-            </div>
+          <div class="card-item" >
+            <img class="card-item__image" id="12" src="./images/magazine/12/1.jpg" alt="">
           </div>
-          <p class="card-item__info"></p>
+          <p class="card-item__info">Декабрь 2022</p>
         </div>
+
 
 
         <div class="card-item">
