--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
           <div class="card-item" >
             <img class="card-item__image" id="9" src="./images/magazine/9/1.jpg" alt="">
           </div>
-          <p class="card-item__info">Сентябрь 2022</p>
+          <p class="card-item__info">Выпуск № 1</p>
         </div>
 
         <div>
           <div class="card-item" >
             <img class="card-item__image" id="10" src="./images/magazine/10/1.jpg" alt="">
           </div>
-          <p class="card-item__info">Октябрь 2022</p>
+          <p class="card-item__info">Выпуск № 2</p>
         </div>
 
 
@@ -45,23 +45,23 @@
           <div class="card-item" >
             <img class="card-item__image" id="11" src="./images/magazine/11/1.jpg" alt="">
           </div>
-          <p class="card-item__info">Ноябрь 2022</p>
+          <p class="card-item__info">Выпуск № 3</p>
         </div>
 
         <div>
           <div class="card-item" >
             <img class="card-item__image" id="12" src="./images/magazine/12/1.jpg" alt="">
           </div>
-          <p class="card-item__info">Декабрь 2022</p>
+          <p class="card-item__info">Выпуск № 4</p>
         </div>
 
 
 
-        <div class="card-item">
-          <div class="card-item__title">
-            <p class="card-item__text">выпуск</p>
-            <p class="card-item__text">январь 2023</p>
+        <div>
+          <div class="card-item" >
+            <img class="card-item__image" id="13" src="./images/magazine/13/1.jpg" alt="">
           </div>
+          <p class="card-item__info">Выпуск № 5</p>
         </div>
 
         <div class="card-item">
