--- a/index.html
+++ b/index.html
@@ -66,50 +66,50 @@
 
         <div class="card-item">
           <div class="card-item__title">
-            <p class="card-item__text">выпуск</p>
-            <p class="card-item__text">февраль 2023</p>
+            <p class="card-item__text">Выпуск № 6</p>
+            <!-- <p class="card-item__text">февраль 2023</p> -->
           </div>
         </div>
 
         <div class="card-item">
           <div class="card-item__title">
-            <p class="card-item__text">выпуск</p>
-            <p class="card-item__text">март 2023</p>
+            <p class="card-item__text">Выпуск № 7</p>
+            <!-- <p class="card-item__text">февраль 2023</p> -->
           </div>
         </div>
 
         <div class="card-item">
           <div class="card-item__title">
-            <p class="card-item__text">выпуск</p>
-            <p class="card-item__text">апрель 2023</p>
+            <p class="card-item__text">Выпуск № 8</p>
+            <!-- <p class="card-item__text">февраль 2023</p> -->
           </div>
         </div>
 
         <div class="card-item">
           <div class="card-item__title">
-            <p class="card-item__text">выпуск</p>
-            <p class="card-item__text">май 2023</p>
+            <p class="card-item__text">Выпуск № 9</p>
+            <!-- <p class="card-item__text">февраль 2023</p> -->
           </div>
         </div>
 
         <div class="card-item">
           <div class="card-item__title">
-            <p class="card-item__text">выпуск</p>
-            <p class="card-item__text">июнь 2023</p>
+            <p class="card-item__text">Выпуск № 10</p>
+            <!-- <p class="card-item__text">февраль 2023</p> -->
           </div>
         </div>
 
         <div class="card-item">
           <div class="card-item__title">
-            <p class="card-item__text">выпуск</p>
-            <p class="card-item__text">июль 2023</p>
+            <p class="card-item__text">Выпуск № 11</p>
+            <!-- <p class="card-item__text">февраль 2023</p> -->
           </div>
         </div>
 
         <div class="card-item">
           <div class="card-item__title">
-            <p class="card-item__text">выпуск</p>
-            <p class="card-item__text">август 2023</p>
+            <p class="card-item__text">Выпуск № 12</p>
+            <!-- <p class="card-item__text">февраль 2023</p> -->
           </div>
         </div>
       </section>
